[package]
name = "changelog_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.141", features = ["derive"] }
serde_json = { version = "1.0.83", features = ["preserve_order"] }
indexmap = "1.9.1"
toml = "0.5.9"
regex = "1.6.0"
log = "*"
env_logger = "*"